// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> renders 1`] = `
<div
  class="field"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input"
    id="field_1"
    role="switch"
    type="button"
  />
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with a custom ID 1`] = `
<div
  class="field"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input"
    id="foo"
    role="switch"
    type="button"
  />
  <label
    class="field__label"
    for="foo"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <button
    aria-checked="true"
    aria-label="On"
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--erroneous"
    id="field_4"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<ToggleButton /> renders with help 1`] = `
<div
  class="field"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input"
    id="field_5"
    role="switch"
    type="button"
  />
  <label
    class="field__label"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
</div>
`;

exports[`<ToggleButton /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input field__input--inline"
    id="field_10"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--inline"
    for="field_10"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with large 1`] = `
<div
  class="field field--large"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input field__input--large"
    id="field_8"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--large"
    for="field_8"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with small 1`] = `
<div
  class="field field--small"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input field__input--small"
    id="field_9"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--small"
    for="field_9"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with success 1`] = `
<div
  class="field field--success"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input field__input--success"
    id="field_6"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--success"
    for="field_6"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders with touched 1`] = `
<div
  class="field field--touched field--success"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input field__input--touched field__input--success"
    id="field_7"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--touched field__label--success"
    for="field_7"
  >
    Jawn
  </label>
</div>
`;

exports[`<ToggleButton /> renders without a label 1`] = `
<div
  class="field"
>
  <button
    aria-checked="true"
    aria-label="On"
    class="field__input"
    id="field_2"
    role="switch"
    type="button"
  />
</div>
`;

exports[`<ToggleButton /> renders without a wrapper 1`] = `
<button
  aria-checked="true"
  aria-label="On"
  class="field__input"
  id="field_3"
  role="switch"
  type="button"
/>
`;
